Update web UI to use VPS domain instead of localhost

--- a/public/vps-download-example.html
+++ b/public/vps-download-example.html
@@ -97,7 +97,7 @@
         let currentDownloadUrl = null;
 
         // Signaling server URL - change this if your server is on a different host
-        const SIGNALING_SERVER_URL = 'http://localhost:3001';
+        const SIGNALING_SERVER_URL = 'http://23d30ea9-059b-4673-9d78-1fa9e5364851.svc.dalang.io';
 
         function log(message, type = 'info') {
             const logDiv = document.getElementById('log');
